Genome index extensively refactored.